--- a/functions/package.json
+++ b/functions/package.json
@@ -16,6 +16,8 @@
   },
   "main": "lib/index.js",
   "dependencies": {
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.1",
     "firebase-admin": "^12.1.0",
     "firebase-functions": "^5.0.0"
   },
