--- a/functions/package.json
+++ b/functions/package.json
@@ -16,17 +16,21 @@
   },
   "main": "lib/index.js",
   "dependencies": {
+    "@types/express-validator": "^3.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "express-validator": "^7.1.0",
     "firebase-admin": "^12.1.0",
     "firebase-functions": "^5.0.0"
   },
   "devDependencies": {
+    "@types/express": "^4.17.21",
     "@typescript-eslint/eslint-plugin": "^5.12.0",
     "@typescript-eslint/parser": "^5.12.0",
     "eslint": "^8.9.0",
     "eslint-config-google": "^0.14.0",
     "eslint-plugin-import": "^2.25.4",
+    "express": "^4.19.2",
     "firebase-functions-test": "^3.1.0",
     "typescript": "^4.9.0"
   },
