--- a/functions/package.json
+++ b/functions/package.json
@@ -32,7 +32,8 @@
     "eslint-plugin-import": "^2.25.4",
     "express": "^4.19.2",
     "firebase-functions-test": "^3.1.0",
-    "typescript": "^4.9.0"
+    "typescript": "^4.9.0",
+    "wait-on": "^7.2.0"
   },
   "private": true
 }
